--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-jshint": "^2.0.0",
+    "jasmine-core": "^2.4.1",
     "jshint": "^2.8.0",
     "jshint-stylish": "^2.1.0"
   }
